refinements to setup

--- a/Analysis/results.ipynb
+++ b/Analysis/results.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "def severinghoouse(x):\n",
+    "def severinghaus(x):\n",
     "    if x == 0:\n",
     "        return 0\n",
     "    return ((((x**3+150*x)**-1 * 23400)+1)**-1) * 100\n",
@@ -274,9 +274,9 @@
     "t2 = '15:05'\n",
     "t3 = '16:25'\n",
     "\n",
-    "spo2_1 = [severinghoouse(i) for i in y1]\n",
-    "spo2_2 = [severinghoouse(i) for i in y2]\n",
-    "spo2_3 = [severinghoouse(i) for i in y3]\n",
+    "spo2_1 = [severinghaus(i) for i in y1]\n",
+    "spo2_2 = [severinghaus(i) for i in y2]\n",
+    "spo2_3 = [severinghaus(i) for i in y3]\n",
     "\n",
     "plt.plot(x,spo2_1, 'o')\n",
     "plt.plot(x,spo2_2, 'o')\n",
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "severinghoouse(48)"
+    "severinghaus(48)"
    ]
   },
   {
